# litresearch

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PROJECT.md  README.md  cliff.toml  feature.md  litresearch.toml.example  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
.opencode/: LESSONS.md  PROJECT_STATE.md
src/litresearch/: __init__.py  __main__.py  cli.py  config.py  llm.py  models.py  pdf.py  pipeline.py  utils.py
src/litresearch/exporters/: zotero.py
src/litresearch/prompts/: __init__.py  analysis.md  query_expansion.md  query_gen.md  screening.md  screening_fallback.md  synthesis.md
src/litresearch/sources/: __init__.py  openalex.py
src/litresearch/stages/: __init__.py  analysis.py  citation_expansion.py  discovery.py  enrichment.py  export.py  query_expansion.py  query_gen.py  ranking.py
tests/integration/: test_module_entrypoint.py
tests/unit/: test_analysis.py  test_cli.py  test_export.py  test_exporters_zotero.py  test_models.py  test_pdf.py  test_pipeline.py  test_sources_openalex.py  test_stages_citation_expansion.py  test_stages_discovery.py  test_stages_query_expansion.py  test_stages_query_gen.py  test_stages_screening.py
