[project]
name = "litresearch"
version = "1.0.1"
description = "CLI tool for automated literature research workflows."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Silas Pignotti", email = "pignottisilas@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "litellm==1.82.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyalex>=0.15",
    "pyzotero>=1.6",
    "pypdf>=6.7.5",
    "rich>=14.3.3",
    "semanticscholar>=0.11.0",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/spignotti/litresearch"
Repository = "https://github.com/spignotti/litresearch"
Documentation = "https://github.com/spignotti/litresearch#readme"
Changelog = "https://github.com/spignotti/litresearch/blob/main/CHANGELOG.md"
Issues = "https://github.com/spignotti/litresearch/issues"

[project.scripts]
litresearch = "litresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litresearch"]

[dependency-groups]
dev = [
    "nox>=2026.2.9",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
